vulnerable-wordpress/red-ns/kubernetes-k3S/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
  namespace: red-ns
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: mysql
